--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "require": "./dist/index.cjs"
   },
   "files": [
-    "./dist/**/*"
+    "./dist/**/*",
+    "./index.ts"
   ],
   "homepage": "https://github.com/jeffposnick/remove-filename-hash#readme",
   "keywords": [
