--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   },
   "source": "./index.ts",
   "type": "module",
+  "types": "./dist/index.d.ts",
   "unpkg": "./dist/index.umd.js",
   "version": "0.0.4",
   "volta": {
