--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "exports": {
     "default": "./dist/index.modern.js",
-    "require": "./dist/index.cjs"
+    "require": "./dist/index.cjs",
+    "types": "./dist/index.d.ts"
   },
   "files": [
     "./dist/**/*",
